...
  return (
    <Tabs
      screenOptions={{ headerShown: false }}
      tabBar={(props) => <TabBar {...props} miniPlayerTrack={miniPlayerTrack} />}
    >
      <Tabs.Screen name="discover" options={{ title: 'Discover', tabBarIcon: tabIcon(PinIcon) }} />
      <Tabs.Screen name="listen" options={{ title: 'Listen', tabBarIcon: tabIcon(SoundIcon) }} />
      <Tabs.Screen
        name="explore"
        options={{ title: 'Explore', tabBarIcon: tabIcon(CompassIcon) }}
      />
      <Tabs.Screen name="passport" options={{ title: 'Passport', tabBarIcon: tabIcon(FlagIcon) }} />
      <Tabs.Screen name="connect" options={{ title: 'Connect', tabBarIcon: tabIcon(FlowerIcon) }} />
    </Tabs>
  );
}

