...
        <View style={[styles.peek, styles.peekRight]} />
      </View>
      <Text variant="title2" style={styles.title}>
        {name}
      </Text>
      <Text variant="subhead" style={styles.subtitle}>
        added to passport
      </Text>
    </View>
  );
}

const styles = StyleSheet.create({
...
